Output lecture.  Done.

--- a/Output/makefile
+++ b/Output/makefile
@@ -1,37 +1,36 @@
 # +mkmake+ -- Everything after this line is automatically generated
 
-EXECUTABLES = 100-rand coutcerr hwpf ints1 ints2 printchars ssn-reader weirdints
+EXECUTABLES = pieln10 coutcerr hwpf ints1 ints2 printchars ssn-reader weirdints
 
 all: $(EXECUTABLES)
 
 clean:
 	rm -f core *.o $(EXECUTABLES) a.out
 
-.SUFFIXES: .cpp .o
-.cpp.o:
+.cpp.cpp:
 	g++ $(CFLAGS) -c $*.cpp
 
 
-100-rand: 100-rand.o
-	g++ $(CFLAGS) -o 100-rand 100-rand.o
+pieln10: pieln10.cpp
+	g++ $(CFLAGS) -o pieln10 pieln10.cpp
 
-coutcerr: coutcerr.o
-	g++ $(CFLAGS) -o coutcerr coutcerr.o
+coutcerr: coutcerr.cpp
+	g++ $(CFLAGS) -o coutcerr coutcerr.cpp
 
-hwpf: hwpf.o
-	g++ $(CFLAGS) -o hwpf hwpf.o
+hwpf: hwpf.cpp
+	g++ $(CFLAGS) -o hwpf hwpf.cpp
 
-ints1: ints1.o
-	g++ $(CFLAGS) -o ints1 ints1.o
+ints1: ints1.cpp
+	g++ $(CFLAGS) -o ints1 ints1.cpp
 
-ints2: ints2.o
-	g++ $(CFLAGS) -o ints2 ints2.o
+ints2: ints2.cpp
+	g++ $(CFLAGS) -o ints2 ints2.cpp
 
-printchars: printchars.o
-	g++ $(CFLAGS) -o printchars printchars.o
+printchars: printchars.cpp
+	g++ $(CFLAGS) -o printchars printchars.cpp
 
-ssn-reader: ssn-reader.o
-	g++ $(CFLAGS) -o ssn-reader ssn-reader.o
+ssn-reader: ssn-reader.cpp
+	g++ $(CFLAGS) -o ssn-reader ssn-reader.cpp
 
-weirdints: weirdints.o
-	g++ $(CFLAGS) -o weirdints weirdints.o
+weirdints: weirdints.cpp
+	g++ $(CFLAGS) -o weirdints weirdints.cpp
