New procedure lab.

--- a/Procedures/makefile
+++ b/Procedures/makefile
@@ -1,6 +1,7 @@
 # +mkmake+ -- Everything after this line is automatically generated
 
-EXECUTABLES = move_filenames_1
+EXECUTABLES = move_filenames_1 move_filesname_3 move_filenames_4 move_filenames_5 move_filenames_6 \
+              move_filenames_8 total_etc_1 total_etc_2
 CFLAGS ?= -Wall -Wextra
 
 all: $(EXECUTABLES)
@@ -11,3 +12,24 @@ clean:
 
 move_filenames_1: move_filenames_1.cpp
 	g++ $(CFLAGS) -o move_filenames_1 move_filenames_1.cpp
+
+move_filenames_3: move_filenames_3.cpp
+	g++ $(CFLAGS) -o move_filenames_3 move_filenames_3.cpp
+
+move_filenames_4: move_filenames_4.cpp
+	g++ $(CFLAGS) -o move_filenames_4 move_filenames_4.cpp
+
+move_filenames_5: move_filenames_5.cpp
+	g++ $(CFLAGS) -o move_filenames_5 move_filenames_5.cpp
+
+move_filenames_6: move_filenames_6.cpp
+	g++ $(CFLAGS) -o move_filenames_6 move_filenames_6.cpp
+
+move_filenames_8: move_filenames_8.cpp
+	g++ $(CFLAGS) -o move_filenames_8 move_filenames_8.cpp
+
+total_etc_1: total_etc_1.cpp
+	g++ $(CFLAGS) -o total_etc_1 total_etc_1.cpp
+
+total_etc_2: total_etc_2.cpp
+	g++ $(CFLAGS) -o total_etc_2 total_etc_2.cpp
