--- a/String/makefile
+++ b/String/makefile
@@ -1,6 +1,7 @@
 # +mkmake+ -- Everything after this line is automatically generated
 
-EXECUTABLES = argv-mess gendouble genstring string-find string-sub
+EXECUTABLES = gendouble string-find string-sub ex1 ex2 ex3 argv-mess
+CFLAGS ?= -Wall -Wextra
 
 all: $(EXECUTABLES)
 
@@ -12,20 +13,24 @@ clean:
 	g++ $(CFLAGS) -c $*.cpp
 
 
-argv-mess: argv-mess.cpp
-	g++ $(CFLAGS) -o argv-mess argv-mess.cpp
-
 gendouble: gendouble.cpp
 	g++ $(CFLAGS) -o gendouble gendouble.cpp
-
-genstring-bad: genstring-bad.cpp
-	g++ $(CFLAGS) -o genstring-bad genstring-bad.cpp
-
-genstring: genstring.cpp
-	g++ $(CFLAGS) -o genstring genstring.cpp
 
 string-find: string-find.cpp
 	g++ $(CFLAGS) -o string-find string-find.cpp
 
 string-sub: string-sub.cpp
 	g++ $(CFLAGS) -o string-sub string-sub.cpp
+
+ex1: ex1.cpp
+	g++ $(CFLAGS) -o ex1 ex1.cpp
+
+ex2: ex2.cpp
+	g++ $(CFLAGS) -o ex2 ex2.cpp
+
+ex3: ex3.cpp
+	g++ $(CFLAGS) -o ex3 ex3.cpp
+
+argv-mess: argv-mess.cpp
+	g++ $(CFLAGS) -o argv-mess argv-mess.cpp
+
