--- a/SetMap/makefile
+++ b/SetMap/makefile
@@ -1,44 +1,63 @@
-EXECUTABLES = setreturn simple_map simple_multiset simple_set simple_set_find nnames_multiset sort_names_1 sort_names_2 sort_names_bad2 sort_names_bad3 sort_names_bad
+EXECUTABLES = \
+bin/simple_set \
+bin/simple_multiset \
+bin/simple_set_find \
+bin/simple_map \
+bin/nnames_multiset \
+bin/qb_1_read_input \
+bin/qb_2_qbs_class \
+bin/qb_3_sort_by_rating_bad \
+bin/qb_4_sort_by_rating \
+bin/qb_5_print_by_name \
+bin/qb_6_print_by_team \
+bin/qb_7_destructor_etc \
+bin/setreturn \
+
+CFLAGS ?= -Wall -Wextra
 
 all: $(EXECUTABLES)
 
 clean:
-	rm -f core *.o $(EXECUTABLES) a.out
+	rm -f bin/* obj/* a.out
 
-.SUFFIXES: .cpp .o
-.cpp.o:
-	g++ $(CFLAGS) -c $*.cpp
+bin/nnames_multiset: src/nnames_multiset.cpp
+	g++ $(CFLAGS) -o bin/nnames_multiset src/nnames_multiset.cpp
 
+bin/setreturn: src/setreturn.cpp
+	g++ $(CFLAGS) -o bin/setreturn src/setreturn.cpp
 
-nnames_multiset: nnames_multiset.o
-	g++ $(CFLAGS) -o nnames_multiset nnames_multiset.o
+bin/simple_map: src/simple_map.cpp
+	g++ $(CFLAGS) -o bin/simple_map src/simple_map.cpp
 
-setreturn: setreturn.o
-	g++ $(CFLAGS) -o setreturn setreturn.o
+bin/simple_multiset: src/simple_multiset.cpp
+	g++ $(CFLAGS) -o bin/simple_multiset src/simple_multiset.cpp
 
-simple_map: simple_map.o
-	g++ $(CFLAGS) -o simple_map simple_map.o
+bin/simple_set: src/simple_set.cpp
+	g++ $(CFLAGS) -o bin/simple_set src/simple_set.cpp
 
-simple_multiset: simple_multiset.o
-	g++ $(CFLAGS) -o simple_multiset simple_multiset.o
+bin/simple_set_find: src/simple_set_find.cpp
+	g++ $(CFLAGS) -o bin/simple_set_find src/simple_set_find.cpp
 
-simple_set: simple_set.o
-	g++ $(CFLAGS) -o simple_set simple_set.o
+bin/qb_1_read_input: src/qb_1_read_input.cpp
+	g++ $(CFLAGS) -o bin/qb_1_read_input src/qb_1_read_input.cpp
 
-simple_set_find: simple_set_find.o
-	g++ $(CFLAGS) -o simple_set_find simple_set_find.o
+bin/qb_2_qbs_class: src/qb_2_qbs_class.cpp
+	g++ $(CFLAGS) -o bin/qb_2_qbs_class src/qb_2_qbs_class.cpp
 
-sort_names_1: sort_names_1.o
-	g++ $(CFLAGS) -o sort_names_1 sort_names_1.o
+bin/qb_2a_bad_find: src/qb_2a_bad_find.cpp
+	g++ $(CFLAGS) -o bin/qb_2a_bad_find src/qb_2a_bad_find.cpp
 
-sort_names_2: sort_names_2.o
-	g++ $(CFLAGS) -o sort_names_2 sort_names_2.o
+bin/qb_3_sort_by_rating_bad: src/qb_3_sort_by_rating_bad.cpp
+	g++ $(CFLAGS) -o bin/qb_3_sort_by_rating_bad src/qb_3_sort_by_rating_bad.cpp
 
-sort_names_bad2: sort_names_bad2.o
-	g++ $(CFLAGS) -o sort_names_bad2 sort_names_bad2.o
+bin/qb_4_sort_by_rating: src/qb_4_sort_by_rating.cpp
+	g++ $(CFLAGS) -o bin/qb_4_sort_by_rating src/qb_4_sort_by_rating.cpp
 
-sort_names_bad3: sort_names_bad3.o
-	g++ $(CFLAGS) -o sort_names_bad3 sort_names_bad3.o
+bin/qb_5_print_by_name: src/qb_5_print_by_name.cpp
+	g++ $(CFLAGS) -o bin/qb_5_print_by_name src/qb_5_print_by_name.cpp
 
-sort_names_bad: sort_names_bad.o
-	g++ $(CFLAGS) -o sort_names_bad sort_names_bad.o
+bin/qb_6_print_by_team: src/qb_6_print_by_team.cpp
+	g++ $(CFLAGS) -o bin/qb_6_print_by_team src/qb_6_print_by_team.cpp
+
+bin/qb_7_destructor_etc: src/qb_7_destructor_etc.cpp
+	g++ -std=c++11 $(CFLAGS) -o bin/qb_7_destructor_etc src/qb_7_destructor_etc.cpp
