--- a/Sudoku/makefile
+++ b/Sudoku/makefile
@@ -1,40 +1,66 @@
-# +mkmake+ -- Everything after this line is automatically generated
+CFLAGS ?= -std=c++98 -Wall -Wextra -Iinclude
 
-EXECUTABLES = sudoku sudoku1 sudoku2 sudoku3 sudoku4 sudoku5
+# -------------------------
+# This means that when you just type "make", you make all of the executables
 
-all: $(EXECUTABLES)
+ALL = bin/sudoku1 \
+      bin/sudoku2 \
+      bin/sudoku3 \
+      bin/sudoku4 \
+      bin/sudoku5 \
+      bin/sudoku \
+
+all: $(ALL)
+
+# -------------------------
+# "make clean" deletes the object files and binaries
 
 clean:
-	rm -f core *.o $(EXECUTABLES) a.out
+	rm -f obj/* bin/*
 
-.SUFFIXES: .c .o
-.c.o:
-	g++ $(CFLAGS) -c $*.c
+# -------------------------
+# Object files
+
+obj/sudoku1.o: src/sudoku1.cpp include/sudoku.hpp
+	g++ $(CFLAGS) -c -o obj/sudoku1.o src/sudoku1.cpp
+
+obj/sudoku2.o: src/sudoku2.cpp include/sudoku.hpp
+	g++ $(CFLAGS) -c -o obj/sudoku2.o src/sudoku2.cpp
+
+obj/sudoku3.o: src/sudoku3.cpp include/sudoku.hpp
+	g++ $(CFLAGS) -c -o obj/sudoku3.o src/sudoku3.cpp
+
+obj/sudoku4.o: src/sudoku4.cpp include/sudoku.hpp
+	g++ $(CFLAGS) -c -o obj/sudoku4.o src/sudoku4.cpp
+
+obj/sudoku5.o: src/sudoku5.cpp include/sudoku.hpp
+	g++ $(CFLAGS) -c -o obj/sudoku5.o src/sudoku5.cpp
+
+obj/sudoku.o: src/sudoku.cpp include/sudoku.hpp
+	g++ $(CFLAGS) -c -o obj/sudoku.o src/sudoku.cpp
+
+obj/sudoku_main.o: src/sudoku_main.cpp include/sudoku.hpp
+	g++ $(CFLAGS) -c -o obj/sudoku_main.o src/sudoku_main.cpp
 
 
-sudoku.o: sudoku.h
-sudoku_main.o: sudoku.h
-sudoku1.o: sudoku.h
-sudoku2.o: sudoku.h
-sudoku3.o: sudoku.h
-sudoku4.o: sudoku.h
-sudoku5.o: sudoku.h
 
-sudoku: sudoku_main.o sudoku.o 
-	g++ $(CFLAGS) -o sudoku sudoku_main.o sudoku.o 
+# -------------------------
+# Executables
 
-sudoku1: sudoku_main.o sudoku1.o 
-	g++ $(CFLAGS) -o sudoku1 sudoku_main.o sudoku1.o 
+bin/sudoku1: obj/sudoku1.o obj/sudoku_main.o
+	g++ $(CFLAGS) -o bin/sudoku1 obj/sudoku1.o obj/sudoku_main.o
 
-sudoku2: sudoku_main.o sudoku2.o 
-	g++ $(CFLAGS) -o sudoku2 sudoku_main.o sudoku2.o 
+bin/sudoku2: obj/sudoku2.o obj/sudoku_main.o
+	g++ $(CFLAGS) -o bin/sudoku2 obj/sudoku2.o obj/sudoku_main.o
 
-sudoku3: sudoku_main.o sudoku3.o 
-	g++ $(CFLAGS) -o sudoku3 sudoku_main.o sudoku3.o 
+bin/sudoku3: obj/sudoku3.o obj/sudoku_main.o
+	g++ $(CFLAGS) -o bin/sudoku3 obj/sudoku3.o obj/sudoku_main.o
 
-sudoku4: sudoku_main.o sudoku4.o 
-	g++ $(CFLAGS) -o sudoku4 sudoku_main.o sudoku4.o 
+bin/sudoku4: obj/sudoku4.o obj/sudoku_main.o
+	g++ $(CFLAGS) -o bin/sudoku4 obj/sudoku4.o obj/sudoku_main.o
 
-sudoku5: sudoku_main.o sudoku5.o 
-	g++ $(CFLAGS) -o sudoku5 sudoku_main.o sudoku5.o 
+bin/sudoku5: obj/sudoku5.o obj/sudoku_main.o
+	g++ $(CFLAGS) -o bin/sudoku5 obj/sudoku5.o obj/sudoku_main.o
 
+bin/sudoku: obj/sudoku.o obj/sudoku_main.o
+	g++ $(CFLAGS) -o bin/sudoku obj/sudoku.o obj/sudoku_main.o
