--- a/Trees/makefile
+++ b/Trees/makefile
@@ -1,16 +1,29 @@
-ALL = bstree_test
-    
+CFLAGS ?= -std=c++98 -Wall -Wextra -Iinclude
+
+# -------------------------
+# This means that when you just type "make", you make all of the executables
+
+ALL = bin/bstree_tester \
 
 all: $(ALL)
 
+# -------------------------
+# "make clean" deletes the object files and binaries
+
 clean:
-	rm -f *.o $(ALL)
+	rm -f obj/* bin/*
 
-.SUFFIXES: .cpp .o
+# -------------------------
+# Object files
 
-.cpp.o:
-	g++ -c $*.cpp
+obj/bstree.o: src/bstree.cpp include/bstree.hpp
+	g++ $(CFLAGS) -c -o obj/bstree.o src/bstree.cpp
 
-bstree_test: bstree_test.o bstree.o
-	g++ -o bstree_test bstree_test.o bstree.o
+obj/bstree_tester.o: src/bstree_tester.cpp include/bstree.hpp
+	g++ $(CFLAGS) -c -o obj/bstree_tester.o src/bstree_tester.cpp
 
+# -------------------------
+# Executables
+
+bin/bstree_tester: obj/bstree_tester.o obj/bstree.o
+	g++ $(CFLAGS) -o bin/bstree_tester obj/bstree_tester.o obj/bstree.o
