--- a/Trees/makefile
+++ b/Trees/makefile
@@ -16,14 +16,17 @@ clean:
 # -------------------------
 # Object files
 
-obj/bstree.o: src/bstree.cpp include/bstree.hpp
-	g++ $(CFLAGS) -c -o obj/bstree.o src/bstree.cpp
-
 obj/bstree_tester.o: src/bstree_tester.cpp include/bstree.hpp
 	g++ $(CFLAGS) -c -o obj/bstree_tester.o src/bstree_tester.cpp
+
+obj/bstree_notes.o: src/bstree_notes.cpp include/bstree.hpp
+	g++ $(CFLAGS) -c -o obj/bstree_notes.o src/bstree_notes.cpp
+
+obj/bstree_lab.o: src/bstree_lab.cpp include/bstree.hpp
+	g++ $(CFLAGS) -c -o obj/bstree_lab.o src/bstree_lab.cpp
 
 # -------------------------
 # Executables
 
-bin/bstree_tester: obj/bstree_tester.o obj/bstree.o
-	g++ $(CFLAGS) -o bin/bstree_tester obj/bstree_tester.o obj/bstree.o
+bin/bstree_tester: obj/bstree_tester.o obj/bstree_notes.o obj/bstree_lab.o
+	g++ $(CFLAGS) -o bin/bstree_tester obj/bstree_tester.o obj/bstree_notes.o obj/bstree_lab.o
