--- a/Sudoku/makefile
+++ b/Sudoku/makefile
@@ -9,6 +9,7 @@ ALL = bin/sudoku1 \
       bin/sudoku4 \
       bin/sudoku5 \
       bin/sudoku \
+      bin/sudoku_draw \
 
 all: $(ALL)
 
@@ -39,6 +40,9 @@ obj/sudoku5.o: src/sudoku5.cpp include/sudoku.hpp
 obj/sudoku.o: src/sudoku.cpp include/sudoku.hpp
 	g++ $(CFLAGS) -c -o obj/sudoku.o src/sudoku.cpp
 
+obj/sudoku_draw.o: src/sudoku_draw.cpp include/sudoku.hpp
+	g++ $(CFLAGS) -c -o obj/sudoku_draw.o src/sudoku_draw.cpp
+
 obj/sudoku_main.o: src/sudoku_main.cpp include/sudoku.hpp
 	g++ $(CFLAGS) -c -o obj/sudoku_main.o src/sudoku_main.cpp
 
@@ -64,3 +68,7 @@ bin/sudoku5: obj/sudoku5.o obj/sudoku_main.o
 
 bin/sudoku: obj/sudoku.o obj/sudoku_main.o
 	g++ $(CFLAGS) -o bin/sudoku obj/sudoku.o obj/sudoku_main.o
+
+bin/sudoku_draw: obj/sudoku_draw.o obj/sudoku_main.o
+	g++ $(CFLAGS) -o bin/sudoku_draw obj/sudoku_draw.o obj/sudoku_main.o
+
